# Q_Project

./: .gitignore  .trae_instructions  AI_RULE.md  README.md  main.py  manifest.json  pyproject.toml  requirements-lock.txt  requirements.in  requirements.txt  setup.py
.github/workflows/: backtest.yml
results/: performance_summary.txt  strategy_comparison_summary.txt
results/SMA_5x60/: strategy_comparison_report.html  strategy_comparison_summary.txt
scripts/: 0_test_dataloader.py  __init__.py  check_dep.py  plot_template.py  scaffold.py
src/: __init__.py  cli.py
src/config/: __init__.py  base_config.py
src/data/: __init__.py  akshare_data_loader.py  base_data_loader.py
src/execution/: __init__.py  base_executor.py
src/risk_management/: __init__.py  base_risk_manager.py
src/strategies/: __init__.py  base_strategy.py  momentum_strategy.py  output_manager.py  sma_strategy.py
strategy/: buy_hold.py  sma_cross.py
tests/: __init__.py  test_akshare_data_loader.py  test_base_data_loader.py  test_base_executor.py  test_base_risk_manager.py  test_base_strategy.py
